--- a/_site.yml
+++ b/_site.yml
@@ -5,10 +5,16 @@ navbar:
   right:
     - text: "About"
       href: about.html
-    - icon: fa-envelope fa-lg
+    - text: Examples
+      menu:
+       - text: "Plotly"
+         href: plotly.html
+       - text: "Dashboard"
+         href: dashboard.html
+   - icon: fa-envelope fa-lg
       href: mailto:<you@youremail.com>
     - icon: fa-github fa-lg
-      href: http://github.com/<YOUR_GH_NAME>/
+      href: http://github.com/ay2452.github.io/
 output:
   html_document:
     theme: cerulean
